validation added and get route error handling fixed
