# routes/index.js
@@ -1,6 +1,6 @@
 const router = require('express').Router();
 
-router.use('/api-docs', require('./swagger'));
+router.use('/', require('./swagger'));
 router.use('/contacts', require('./contacts'));
 
 module.exports = router;
